// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders HorizontalRule with defaults 1`] = `
.c0 {
  font-size: 1em;
  line-height: 1.3;
  margin: 0;
  font-size: 1rem;
  margin-bottom: 0.5em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1::after,
.c1::before {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-top: 1px solid;
  content: '';
}

.c1::before {
  margin-right: 0.5rem;
}

.c1::after {
  margin-left: 0.5rem;
}

@media print {

}

@media print {

}

<p
  class="c0 c1"
>
  or
</p>
`;

exports[`Renders HorizontalRule without children 1`] = `
.c0 {
  font-size: 1em;
  line-height: 1.3;
  margin: 0;
  font-size: 1rem;
  margin-bottom: 0.5em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1::after,
.c1::before {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-top: 1px solid;
  content: '';
}

@media print {

}

@media print {

}

<p
  class="c0 c1"
/>
`;
